k8s/04-ontos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ontos-app
  namespace: ontos
  labels:
    app: ontos-app
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
      name: http
  selector:
    app: ontos-app
